--- a/pom.xml
+++ b/pom.xml
@@ -102,7 +102,10 @@
         <module>plugins/rocksdb</module>
         <module>plugins/websocket</module>
         <module>plugins/ml</module>
+
         <module>plugins/aerospike</module>
+        <module>plugins/nsq-hook</module>
+
         <!--
         <module>plugins/memory</module>
         -->
