Adding Sparkey DB Support + Testing chain on Aerospike / NSQ (Adding logs for study/comparison purpose)

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,7 @@
 
         <module>plugins/aerospike</module>
         <module>plugins/nsq-hook</module>
+        <module>plugins/sparkey</module>
 
         <!--
         <module>plugins/memory</module>
