--- a/plugins/sparkey/pom.xml
+++ b/plugins/sparkey/pom.xml
@@ -25,14 +25,13 @@
         <version>7-SNAPSHOT</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>nsq-hook</artifactId>
-    <name>nsq-hook</name>
-    <version>7-SNAPSHOT</version>
+
+    <artifactId>greycat-sparkey</artifactId>
+    <name>greycat-sparkey</name>
 
     <properties>
-        <nsq.version>1.0.0.RC4</nsq.version>
+        <sparkey.version>2.1.3</sparkey.version>
         <header.path>${basedir}/../../HEADER</header.path>
     </properties>
 
@@ -43,14 +42,9 @@
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
-            <groupId>com.github.brainlag</groupId>
-            <artifactId>nsq-client</artifactId>
-            <version>${nsq.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.datathings</groupId>
-            <artifactId>greycat-aerospike</artifactId>
-            <version>7-SNAPSHOT</version>
+            <groupId>com.spotify.sparkey</groupId>
+            <artifactId>sparkey</artifactId>
+            <version>${sparkey.version}</version>
         </dependency>
     </dependencies>
 </project>
