--- a/greycat/pom.xml
+++ b/greycat/pom.xml
@@ -22,6 +22,19 @@
     <name>greycat</name>
     <version>7-SNAPSHOT</version>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.github.brainlag</groupId>
+            <artifactId>nsq-client</artifactId>
+            <version>${nsq.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.spotify.sparkey</groupId>
+            <artifactId>sparkey</artifactId>
+            <version>${sparkey.version}</version>
+        </dependency>
+    </dependencies>
+
     <parent>
         <artifactId>greycat-parent</artifactId>
         <groupId>com.datathings</groupId>
@@ -31,6 +44,8 @@
 
     <properties>
         <js.name>greycat</js.name>
+        <nsq.version>1.0.0.RC4</nsq.version>
+        <sparkey.version>2.1.3</sparkey.version>
         <header.path>${basedir}/../HEADER</header.path>
     </properties>
 
