--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,7 @@
         <module>plugins/aerospike</module>
         <module>plugins/nsq-hook</module>
         <module>plugins/sparkey</module>
+        <module>plugins/backup</module>
 
         <!--
         <module>plugins/memory</module>
