Value for backups are now also B64 / Completing primitive types / Index as String / Minimal backup / Refactoring'

--- a/plugins/backup/pom.xml
+++ b/plugins/backup/pom.xml
@@ -40,5 +40,10 @@
             <artifactId>greycat</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.datathings</groupId>
+            <artifactId>greycat-websocket</artifactId>
+            <version>7-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
