--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,6 @@ plugins/storage/cassandra/src/main/resources/
 plugins/taskide/src/main/web/node_modules/
 node_modules/
 *.ldt
+
+/plugins/backup/data/
+/data/
