--- a/greycat/pom.xml
+++ b/greycat/pom.xml
@@ -33,6 +33,11 @@
             <artifactId>sparkey</artifactId>
             <version>${sparkey.version}</version>
         </dependency>
+        <dependency>
+            <groupId>io.nats</groupId>
+            <artifactId>jnats</artifactId>
+            <version>${nats.version}</version>
+        </dependency>
     </dependencies>
 
     <parent>
@@ -46,6 +51,7 @@
         <js.name>greycat</js.name>
         <nsq.version>1.0.0.RC4</nsq.version>
         <sparkey.version>2.1.3</sparkey.version>
+        <nats.version>1.0</nats.version>
         <header.path>${basedir}/../HEADER</header.path>
     </properties>
 
