--- a/greycat/pom.xml
+++ b/greycat/pom.xml
@@ -38,6 +38,11 @@
             <artifactId>jnats</artifactId>
             <version>${nats.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>${h2.version}</version>
+        </dependency>
     </dependencies>
 
     <parent>
@@ -52,6 +57,7 @@
         <nsq.version>1.0.0.RC4</nsq.version>
         <sparkey.version>2.1.3</sparkey.version>
         <nats.version>1.0</nats.version>
+        <h2.version>1.4.195</h2.version>
         <header.path>${basedir}/../HEADER</header.path>
     </properties>
 
