Adding namespace to property file + React base for Backup GUI

--- a/greycat/src/main/resources/config.properties
+++ b/greycat/src/main/resources/config.properties
@@ -1,5 +1,5 @@
-poolsize=100
-threadpool=1000
-savepoint=10000
-maxentry=500000
-timelapse=360000
+backup.poolsize=100
+backup.threadpool=1000
+backup.savepoint=10000
+backup.maxentry=500000
+backup.timelapse=360000
