--- a/plugins/backup/src/main/resources/config.properties
+++ b/plugins/backup/src/main/resources/config.properties
@@ -1,5 +1,5 @@
-poolsize=5
-threadpool=1000
-savepoint=1000
-maxentry=10000
-timelapse=60000
+backup.poolsize=5
+backup.threadpool=1000
+backup.savepoint=1000
+backup.maxentry=10000
+backup.timelapse=60000
