--- a/plugins/backup/src/main/web/package.json
+++ b/plugins/backup/src/main/web/package.json
@@ -3,10 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-native": "^0.44.3",
-    "react-native-fs": "^2.3.3"
+    "react-native-fs": "^2.3.3",
+    "react-visjs-timeline": "^1.3.3",
+    "vis": "^4.20.0"
   },
   "devDependencies": {
     "react-scripts": "1.0.7"
