--- a/plugins/backup/src/main/web/package.json
+++ b/plugins/backup/src/main/web/package.json
@@ -3,11 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "input-moment": "^0.3.4",
     "moment": "^2.18.1",
     "react": "^15.5.4",
+    "react-bootstrap": "^0.31.0",
+    "react-datetime": "^2.8.10",
+    "react-datetime-together": "^0.3.2",
     "react-dom": "^15.5.4",
     "react-native": "^0.44.3",
     "react-native-fs": "^2.3.3",
+    "react-treebeard": "^1.1.4",
     "react-visjs-timeline": "^1.3.3",
     "vis": "^4.20.0"
   },
