--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,7 @@
         <module>modeling/mavenplugin</module>
         <!-- Examples-->
         <module>examples/modeling</module>
+        <module>plugins/backupexposer</module>
 
 
         <!--
