--- a/plugins/backup/src/main/web/package.json
+++ b/plugins/backup/src/main/web/package.json
@@ -11,6 +11,7 @@
     "react-datetime": "^2.8.10",
     "react-datetime-together": "^0.3.2",
     "react-dom": "^15.5.4",
+    "react-http-request": "^1.0.3",
     "react-native": "^0.44.3",
     "react-native-fs": "^2.3.3",
     "react-treebeard": "^1.1.4",
