Correcting headers + add Minio to rocksdb backup saver

--- a/greycat/src/main/resources/config.properties
+++ b/greycat/src/main/resources/config.properties
@@ -3,3 +3,7 @@ backup.threadpool=1000
 backup.savepoint=10000
 backup.maxentry=500000
 backup.timelapse=360000
+
+minio.path=http://localhost:9000
+minio.secret=15d4CYxNHAR12tKjxN/1q5HIgIo4KbzC1twzozwZ
+minio.access=QZEIXYIYB22HADEYYC1X 
