--- a/plugins/backup/pom.xml
+++ b/plugins/backup/pom.xml
@@ -33,6 +33,7 @@
     <properties>
         <header.path>${basedir}/../../HEADER</header.path>
         <sparkey.version>2.1.3</sparkey.version>
+        <minio.version>3.0.4</minio.version>
     </properties>
 
     <dependencies>
@@ -50,6 +51,11 @@
             <groupId>com.datathings</groupId>
             <artifactId>greycat-rocksdb</artifactId>
             <version>8-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>${minio.version}</version>
         </dependency>
     </dependencies>
 
