--- a/plugins/backup/src/main/web/package.json
+++ b/plugins/backup/src/main/web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "input-moment": "^0.3.4",
+    "minio": "^3.1.3",
     "moment": "^2.18.1",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
