--- a/greycat/src/test/resources/config.properties
+++ b/greycat/src/test/resources/config.properties
@@ -3,3 +3,8 @@ backup.threadpool=1000
 backup.savepoint=1000
 backup.maxentry=10000
 backup.timelapse=60000
+
+minio.path=http://localhost:9000
+minio.secret=15d4CYxNHAR12tKjxN/1q5HIgIo4KbzC1twzozwZ
+minio.access=QZEIXYIYB22HADEYYC1X
+minio.bucket=testlogs
