Refactoring + CORS Problem + Stream input in React

--- a/greycat/src/main/resources/config.properties
+++ b/greycat/src/main/resources/config.properties
@@ -6,4 +6,5 @@ backup.timelapse=360000
 
 minio.path=http://localhost:9000
 minio.secret=15d4CYxNHAR12tKjxN/1q5HIgIo4KbzC1twzozwZ
-minio.access=QZEIXYIYB22HADEYYC1X 
+minio.access=QZEIXYIYB22HADEYYC1X
+minio.bucket=logs
