--- a/plugins/backup/src/main/resources/config.properties
+++ b/plugins/backup/src/main/resources/config.properties
@@ -8,3 +8,4 @@ minio.path=http://localhost:9000
 minio.secret=15d4CYxNHAR12tKjxN/1q5HIgIo4KbzC1twzozwZ
 minio.access=QZEIXYIYB22HADEYYC1X$
 minio.bucket=logs
+minio.dbbucket=database
