--- a/plugins/backupexposer/pom.xml
+++ b/plugins/backupexposer/pom.xml
@@ -34,6 +34,7 @@
         <header.path>${basedir}/../../HEADER</header.path>
         <undertow.version>1.4.16.Final</undertow.version>
         <gson.version>2.8.1</gson.version>
+        <minio.version>3.0.4</minio.version>
     </properties>
 
     <dependencies>
@@ -61,6 +62,11 @@
             <groupId>com.datathings</groupId>
             <artifactId>backup</artifactId>
             <version>9-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>${minio.version}</version>
         </dependency>
     </dependencies>
 </project>
