--- a/plugins/backupexposer/src/main/resources/config.properties
+++ b/plugins/backupexposer/src/main/resources/config.properties
@@ -9,3 +9,5 @@ minio.secret=15d4CYxNHAR12tKjxN/1q5HIgIo4KbzC1twzozwZ
 minio.access=QZEIXYIYB22HADEYYC1X
 minio.bucket=logs
 minio.dbbucket=database
+
+nats.url=nats://localhost:4222
