--- a/greycat/pom.xml
+++ b/greycat/pom.xml
@@ -54,6 +54,11 @@
             <artifactId>jnats</artifactId>
             <version>${nats.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20170516</version>
+        </dependency>
     </dependencies>
 
     <build>
